# dspy-playground

./: .env.example  .gitignore  README.md  optimized_math_qwen25_7bn.json  pyproject.toml
notebooks/: init.ipynb
