[project]
name = "dspy-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy>=2.6.27",
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "langgraph>=0.5.4",
    "llama-index-embeddings-ollama>=0.6.0",
    "llama-index-llms-ollama>=0.6.2",
    "llama-index-vector-stores-elasticsearch>=0.4.3",
    "llama-index>=0.12.52",
]
